--- a/miniprogram/pages/index/banner/banner.wxml
+++ b/miniprogram/pages/index/banner/banner.wxml
@@ -8,6 +8,7 @@
     interval="2000"
     duration="1000"
     indicator-color="rgba(0, 0, 0, .3)"
+    bindchange="getSwiprIndex"
   >
     <block wx:for="{{ bannerList }}" wx:key="index">
       <swiper-item class="swiper-item">
@@ -28,7 +29,7 @@
     <text
       wx:for="{{bannerList.length}}"
       wx:key="id"
-      class="{{ 'active rectangle' }}"
+      class="{{ index===activeIndex ? 'active rectangle': 'rectangle' }}"
     ></text>
   </view>
 </view>
