--- a/miniprogram/pages/index/index.scss
+++ b/miniprogram/pages/index/index.scss
@@ -10,6 +10,13 @@
     border-radius: 0 0 20rpx 20rpx;
   }
 
+  // 页面主体区域
+  .container {
+    padding: 20rpx;
+    background-color: #f7f4f8;
+    min-height: 100vh;
+  }
+
   .adver {
     display: flex;
     width: 100%;
@@ -18,6 +25,7 @@
     box-sizing: border-box;
     border-radius: 18rpx;
     overflow: hidden;
+    margin: 20rpx 0;
 
     .adver-left {
       width: 50%;
