--- a/miniprogram/pages/index/entrance/entrance.wxml
+++ b/miniprogram/pages/index/entrance/entrance.wxml
@@ -1,10 +1,6 @@
 <view class="nav-list">
   <!-- 一级分类导航容器 -->
-  <view
-    wx:for="{{ cateList }}"
-    wx:key="id"
-    class="nav-item {{ index >= 5 ? 'small' : '' }}"
-  >
+  <view wx:for="{{ cateList }}" wx:key="id" class="nav-item {{ index >= 5 ? 'small' : '' }}">
     <!-- 导航链接 -->
     <navigator class="navigator-nav" url="/pages/goods/list/list?category1Id={{item.id}}">
       <image class="nav-img" src="{{ item.icon || '../../../assets/images/cate-1.png' }}" />
