--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -5,15 +5,15 @@
   <!-- 页面主体区域 -->
   <view class="container">
     <!-- 轮播图区域 -->
-    <banner bannerList="{{bannerList}}"/>
+    <banner bannerList="{{bannerList}}" />
 
     <!-- 导航分类 -->
-    <entrance cateList="{{categoryList}}"/>
+    <entrance cateList="{{categoryList}}" />
 
     <!-- 广告区域 -->
     <view class="adver">
       <view class="adver-left">
-        <navigator url="/pages/goods/list/list?category2Id=1">
+        <navigator url="/pages/goods/list/list?category2Id={{activeList}}">
           <image src="/assets/images/love.jpg" mode="widthFix" />
         </navigator>
       </view>
