--- a/miniprogram/pages/category/category.scss
+++ b/miniprogram/pages/category/category.scss
@@ -6,17 +6,27 @@
     width: 220rpx;
     height: 100vh;
     background: #fff !important;
+    border-right: 1rpx solid #f5f5f5;
 
     .left-view-item {
       line-height: 99rpx;
       text-align: center;
       font-size: 26rpx;
+      color: #333;
+      position: relative;
+      cursor: pointer;
+      transition: all 0.3s ease;
+
+      &:hover {
+        background-color: #f8f8f8;
+      }
     }
 
     .active {
-      background-color: #ffffff;
+      background-color: #fff;
       position: relative;
       color: #f3514f;
+      font-weight: 500;
 
       &::before {
         content: ' ';
@@ -39,26 +49,35 @@
     flex-wrap: wrap;
     background: #fff !important;
     margin-left: 8rpx;
+    padding: 20rpx;
 
     .right-view-item {
       width: 33%;
       float: left;
       margin-top: 30rpx;
+      text-align: center;
 
       .navigator {
         display: flex;
         flex-direction: column;
         align-items: center;
+        text-decoration: none;
+        color: inherit;
       }
 
       image {
         width: 90rpx;
         height: 90rpx;
+        border-radius: 8rpx;
+        margin-bottom: 10rpx;
       }
 
       text {
         font-size: 26rpx;
         margin-top: 18rpx;
+        color: #333;
+        display: block;
+        line-height: 1.4;
       }
     }
   }
