--- a/miniprogram/pages/goods/list/list.wxml
+++ b/miniprogram/pages/goods/list/list.wxml
@@ -1,23 +1,22 @@
-<!--pages/goods/list/index.wxml-->
-
+<!-- pages/goods/list/index.wxml -->
 <view class="container">
   <!-- 商品列表功能 -->
-  <view class="goods-list">
-    <block>
-      <goods-card></goods-card>
-      <goods-card></goods-card>
-      <goods-card></goods-card>
-      <goods-card></goods-card>
+  <view class="goods-list" wx:if="{{ goodsList.length > 0 }}">
+    <block wx:for="{{ goodsList }}" wx:key="id">
+      <goods-card goods="{{ item }}" bindtap="onGoodsClick" data-goods-id="{{ item.id }}"></goods-card>
     </block>
-
     <!-- 数据是否加载完毕 -->
     <view class="finish" hidden="{{ !isFinish }}">数据加载完毕~~~</view>
   </view>
-
   <!-- 商品为空的时候展示的结构 -->
-  <!-- <van-empty description="该分类下暂无商品，去看看其他商品吧～">
-    <van-button round type="danger" class="bottom-button" bindtap="gotoBack">
-      查看其他商品
-    </van-button>
-  </van-empty> -->
+  <view class="empty-container" wx:if="{{ goodsList.length === 0 && !isFinish }}">
+    <van-empty description="该分类下暂无商品，去看看其他商品吧～">
+      <van-button round type="danger" class="bottom-button" bindtap="gotoBack">查看其他商品</van-button>
+    </van-empty>
+  </view>
+  <!-- 加载中 -->
+  <view class="loading" wx:if="{{ goodsList.length === 0 && isFinish === false }}">
+    <van-loading type="spinner" color="#1989fa" />
+    <text>加载中...</text>
+  </view>
 </view>
