--- a/miniprogram/pages/index/entrance/entrance.wxml
+++ b/miniprogram/pages/index/entrance/entrance.wxml
@@ -3,7 +3,7 @@
   <view wx:for="{{ cateList }}" wx:key="id" class="nav-item {{ index >= 5 ? 'small' : '' }}">
     <!-- 导航链接 -->
     <navigator class="navigator-nav" url="/pages/goods/list/list?category1Id={{item.id}}">
-      <image class="nav-img" src="{{ item.icon || '../../../assets/images/cate-1.png' }}" />
+      <image class="nav-img" src="{{ item.imageUrl }}" />
       <text class="nav-text">{{ item.name }}</text>
     </navigator>
   </view>
