--- a/miniprogram/pages/login/login.scss
+++ b/miniprogram/pages/login/login.scss
@@ -14,3 +14,11 @@
 .van-empty__description {
   margin-top: -40rpx !important;
 }
+
+.bottom-button {
+  margin-top: 40rpx;
+  width: 80%;
+  height: 80rpx;
+  font-size: 32rpx;
+  font-weight: 500;
+}
