--- a/miniprogram/pages/login/login.wxml
+++ b/miniprogram/pages/login/login.wxml
@@ -1,5 +1,4 @@
 <van-empty image="/assets/images/avatar.png" description="请点击下方的按钮，授权登录您的账户～">
   <van-button round type="danger" class="bottom-button" bindtap="login">点击授权登录</van-button>
 </van-empty>
-
-<view>{{ token }}</view>
+<view>{{ userInfo.nickName }}</view>
