完成更新用户信息

--- a/miniprogram/pages/my/my.wxml
+++ b/miniprogram/pages/my/my.wxml
@@ -35,7 +35,7 @@
       </view>
       <view class="order-content-wrap">
         <view class="order-content-item" wx:for="{{ initpanel }}" wx:key="index">
-          <navigator url="{{ item.url }}">
+          <navigator url="{{token ? item.url : '/pages/login/login'}}">
             <view class="iconfont {{ item.iconfont }}"></view>
             <text>{{ item.title }}</text>
           </navigator>
