--- a/miniprogram/modules/settingModule/pages/profile/profile.wxml
+++ b/miniprogram/modules/settingModule/pages/profile/profile.wxml
@@ -1,32 +1,20 @@
 <view class="container">
   <view class="setting-list avatar-container">
     <text>头像</text>
-
     <view class="avatar">
-      <button hover-class="none">
+      <button hover-class="none" open-type="chooseAvatar" bindchooseavatar="onChooseAvatar">
         <image src="{{ userInfo.headimgurl || '/assets/images/avatar.png' }}" />
       </button>
     </view>
   </view>
-
   <view class="setting-list nickname" bindtap="onUpdateNickName">
     <text>昵称</text>
     <text>{{ userInfo.nickname || '尚硅谷' }}</text>
   </view>
-
   <view class="footer">
     <view class="btn">保存</view>
   </view>
-
-  <van-dialog
-    custom-style="position: relative"
-    use-slot
-    title="修改昵称"
-    show="{{ isShowPopup }}"
-    showConfirmButton="{{ false }}"
-    showCancelButton="{{ false }}"
-    transition="fade"
-  >
+  <van-dialog custom-style="position: relative" use-slot title="修改昵称" show="{{ isShowPopup }}" showConfirmButton="{{ false }}" showCancelButton="{{ false }}" transition="fade">
     <form>
       <input class="input-name" value="{{ userInfo.nickname }}" />
       <view class="dialog-content">
