修复头像更新问题

--- a/miniprogram/pages/test/test.wxml
+++ b/miniprogram/pages/test/test.wxml
@@ -1,14 +1,16 @@
-<!--pages/test/test.wxml-->
-
-
+<!-- pages/test/test.wxml -->
 <view class="box">
   <button type="warn" plain size="mini" bindtap="handler">测试发送请求</button>
 </view>
-
 <view class="box">
   <button type="primary" plain size="mini" bindtap="handler1">测试发送请求</button>
 </view>
-
 <view class="box">
   <button type="warn" plain size="mini" bindtap="allHandler">测试并发请求</button>
+</view>
+<view class="box">
+  <button type="primary" plain size="mini" bindtap="concurrentHandler">测试真正并发请求</button>
+</view>
+<view class="box">
+  <button type="warn" plain size="mini" bindtap="testAvatarUpload">测试头像上传</button>
 </view>
