--- a/miniprogram/modules/settingModule/pages/profile/profile.wxml
+++ b/miniprogram/modules/settingModule/pages/profile/profile.wxml
@@ -3,7 +3,7 @@
     <text>头像</text>
     <view class="avatar">
       <button hover-class="none" open-type="chooseAvatar" bindchooseavatar="onChooseAvatar">
-        <image src="{{ userInfo.headimgurl || '/assets/images/avatar.png' }}" />
+        <image src="{{ userInfo.headimgurl || '/assets/images/avatar.png' }}" binderror="onImageError" bindload="onImageLoad" mode="aspectFill" />
       </button>
     </view>
   </view>
