--- a/miniprogram/modules/settingModule/pages/profile/profile.scss
+++ b/miniprogram/modules/settingModule/pages/profile/profile.scss
@@ -100,19 +100,56 @@ button[type='primary'] {
 // 更新用户名
 .dialog-content {
   display: flex;
+  justify-content: space-between;
+  padding: 20rpx 40rpx 40rpx;
+  gap: 20rpx;
 
   .cancel {
+    flex: 1;
     color: #333;
     font-size: 34rpx;
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
+    border-radius: 8rpx;
+    height: 80rpx;
+    line-height: 80rpx;
+  }
+
+  .confirm {
+    flex: 1;
+    background-color: #fa4126 !important;
+    color: #fff !important;
+    border-radius: 8rpx;
+    height: 80rpx;
+    line-height: 80rpx;
   }
 }
 
 .input-name {
   border: 1px solid #ccc;
-  margin: 40rpx 40rpx;
+  margin: 40rpx 40rpx 20rpx;
   height: 60rpx;
   line-height: 60rpx;
   border-radius: 16rpx;
   padding: 6rpx 12rpx;
   padding-left: 20rpx;
+  font-size: 28rpx;
+  width: calc(100% - 80rpx);
+  box-sizing: border-box;
+}
+
+// 弹框样式优化
+.van-dialog {
+  border-radius: 16rpx;
+
+  .van-dialog__header {
+    padding: 40rpx 40rpx 20rpx;
+    font-size: 32rpx;
+    font-weight: bold;
+    color: #333;
+  }
+
+  .van-dialog__content {
+    padding: 0;
+  }
 }
