定义新增参数以及封装接口API、收集省市区数据

--- a/miniprogram/modules/settingModule/pages/address/add/index.wxml
+++ b/miniprogram/modules/settingModule/pages/address/add/index.wxml
@@ -24,7 +24,7 @@
       <view class="row">
         <text class="title">所在地区</text>
 
-        <picker mode="region">
+        <picker mode="region" value="{{ [provinceName, cityName, districtName] }}">
           <view class="placeholder"> 请选择收货人所在地区</view>
         </picker>
 
