收集市区数据

--- a/miniprogram/modules/settingModule/pages/address/add/index.wxml
+++ b/miniprogram/modules/settingModule/pages/address/add/index.wxml
@@ -24,8 +24,12 @@
       <view class="row">
         <text class="title">所在地区</text>
 
-        <picker mode="region" value="{{ [provinceName, cityName, districtName] }}">
-          <view class="placeholder"> 请选择收货人所在地区</view>
+        <picker mode="region"  value="{{ [provinceName, cityName, districtName] }}"
+        bindchange="onRegionChange">
+          <view class="region" wx:if="{{provinceName}}">
+            {{provinceName+''+cityName+''+districtName}}
+          </view>
+          <view wx:else class="placeholder"> 请选择收货人所在地区</view>
         </picker>
 
         <view class="location">
