--- a/miniprogram/pages/goods/detail/detail.wxml
+++ b/miniprogram/pages/goods/detail/detail.wxml
@@ -62,9 +62,10 @@
             </view>
 
             <!-- 步进器组件控制购买数量 -->
-            <view class="buy-btn">
+            <view class="buy-btn" wx:if="{{ buyNow === 0 }}">
               <!-- Stepper 步进器，由增加按钮、减少按钮和输入框组成，控制购买数量 -->
-              <van-stepper value="{{ count }}" bind:change="onChangeGoodsCount" />
+              <van-stepper value="{{ count }}" bind:change="onChangeGoodsCount"
+               min="1" max="200" integer  />
             </view>
           </view>
         </view>
@@ -76,7 +77,7 @@
         <textarea
           model:value="{{ blessing }}"
           bindinput="onTextAreaChange"
-          class="form-textarea"
+          class="form-textarea" 
           placeholder="必填，写上您的祝福语，给心爱的他（她）送上你的祝福（请勿填写特殊符号或表情符号）"
           name="textarea"
         />
@@ -84,7 +85,7 @@
 
       <!-- 确定按钮 -->
       <view class="sheet-footer-btn">
-        <van-button block type="primary" round> 确定 </van-button>
+        <van-button block type="primary" round bindtap="handleSubmit"> 确定 </van-button>
       </view>
     </view>
   </van-action-sheet>
